--- a/themes/reloaded/static/css/style.css
+++ b/themes/reloaded/static/css/style.css
@@ -4,14 +4,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.jumbotron {
-    padding: 4rem 2rem;
-}
-
 .headerImage {
     width: 230px;
-    height: 230px;
     margin-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     border-radius: 1%;
+    max-width: 100%;
+    height: auto;
 }
