--- a/themes/reloaded/static/css/style.css
+++ b/themes/reloaded/static/css/style.css
@@ -4,11 +4,25 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #11131b;
+}
+
 .headerImage {
-    width: 230px;
+    width: 225px;
     margin-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     border-radius: 1%;
     max-width: 100%;
     height: auto;
+}
+
+.custom-navbar {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.custom-nav-item {
+    font-size: 1.4rem;
+    font-weight: bold;
 }
