Add projects page

--- a/themes/reloaded/layouts/index.html
+++ b/themes/reloaded/layouts/index.html
@@ -6,6 +6,7 @@
                 <img class="headerImage" src="/images/matt.png" alt="Photo of Matthew Zegar"/>
                 <h2>Matthew Zegar</h2>
                 <p>Computer Science Student at Simon Fraser University</p>
+                <i class="fas fa-heart">ll</i>
             </div>
             <br/>
             {{.Content}}
