--- a/themes/reloaded/layouts/_default/single.html
+++ b/themes/reloaded/layouts/_default/single.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
         <div class="col-8">
             <h2>{{ .Title }}</h2>
-            <br><br>
+            {{ partial "metadata.html" . }}
             {{ .Content }}
         </div>
     </div>
