--- a/themes/reloaded/layouts/index.html
+++ b/themes/reloaded/layouts/index.html
@@ -6,7 +6,20 @@
                 <img class="headerImage" src="/images/matt.png" alt="Photo of Matthew Zegar"/>
                 <h2>Matthew Zegar</h2>
                 <p>Computer Science Student at Simon Fraser University</p>
-                <i class="fas fa-heart">ll</i>
+
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-auto icon">
+                            <a href="https://github.com/mzegar"> <i class="fab fa-github"></i></a>
+                        </div>
+                        <div class="col-auto icon">
+                            <a href="https://www.linkedin.com/in/matthewzegar/"> <i class="fab fa-linkedin"></i></a>
+                        </div>
+                        <div class="col-auto icon">
+                            <a href="mailto:matthewzegar@gmail.com"> <i class="fas fa-envelope-square"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <br/>
             {{.Content}}
