--- a/themes/reloaded/layouts/index.html
+++ b/themes/reloaded/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-sm-12 col-lg-8">
             <div class="jumbotron text-center">
                 <img class="headerImage" src="/images/matt.png" alt="Photo of Matthew Zegar"/>
                 <h2>Matthew Zegar</h2>
