--- a/themes/reloaded/layouts/partials/header.html
+++ b/themes/reloaded/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div class="container custom-navbar">
     <div class="row justify-content-center">
-        <div class="col-10">
+        <div class="col-sm-12 col-lg-10">
             <nav class="navbar navbar-expand">
                 <a class="navbar-brand custom-nav-item" href="/">Matthew Zegar</a>
                 <div class="navbar-collapse justify-content-end" id="navbarNavAltMarkup">
