--- a/themes/reloaded/layouts/partials/header.html
+++ b/themes/reloaded/layouts/partials/header.html
@@ -2,7 +2,8 @@
     <div class="row justify-content-center">
         <div class="col-sm-12 col-lg-10">
             <nav class="navbar navbar-expand">
-                <a class="navbar-brand custom-nav-item" href="/">Matthew Zegar</a>
+                <a class="navbar-brand custom-nav-item title-lg-view" href="/">Matthew Zegar</a>
+                <a class="navbar-brand custom-nav-item title-sm-view" href="/">MZ</a>
                 <div class="navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
                         {{ range .Site.Menus.main }}
