--- a/themes/reloaded/layouts/_default/list.html
+++ b/themes/reloaded/layouts/_default/list.html
@@ -4,12 +4,10 @@
         <div class="col-sm-12 col-lg-8">
             <h2>{{ .Title }}</h2>
             {{ range .Pages.ByPublishDate.Reverse }}
-            <p>
             <h4><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h4>
-            {{ partial "metadata.html" . }}
-            </p>
+            <p>{{ partial "metadata.html" . }}</p>
+            {{ end }}
         </div>
     </div>
 </div>
-{{ end }}
 {{ end }}
