--- a/themes/reloaded/layouts/partials/metadata.html
+++ b/themes/reloaded/layouts/partials/metadata.html
@@ -1,9 +1,8 @@
 {{if .Params.author}}
-<p>{{ .Params.author }}</p>
+<span class="name">{{ .Params.author }}, </span>
 {{end}}
 {{if .Params.date}}
 {{ $dateTime := .PublishDate.Format "2006-01-02" }}
 {{ $dateFormat := .Site.Params.dateFormat | default "Jan 2, 2006" }}
-<i data-feather="calendar"></i>
 <time datetime="{{ $dateTime }}">{{ .PublishDate.Format $dateFormat }}</time>
 {{end}}
