--- a/themes/reloaded/static/css/style.css
+++ b/themes/reloaded/static/css/style.css
@@ -8,6 +8,10 @@ body {
     background-color: #11131b;
 }
 
+.name, time {
+    font-weight: 900;
+}
+
 .headerImage {
     width: 225px;
     margin-bottom: 20px;
