Change headshot photo

--- a/themes/reloaded/layouts/index.html
+++ b/themes/reloaded/layouts/index.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
         <div class="col-sm-12 col-lg-8">
             <div class="jumbotron text-center">
-                <img class="headerImage" src="/images/matt.png" alt="Photo of Matthew Zegar"/>
+                <img class="headerImage" src="/images/mattsummer.png" alt="Photo of Matthew Zegar"/>
                 <h2>Matthew Zegar</h2>
                 <p>Computer Science Student at Simon Fraser University</p>
 
