--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,12 +9,12 @@ body {
 }
 
 .headerImage {
-    width: 225px;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    border-radius: 1%;
-    max-width: 100%;
-    height: auto;
+    width: 225px !important;
+    margin-bottom: 20px !important;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3) !important;
+    border-radius: 1% !important;
+    max-width: 100% !important;
+    height: auto !important;
 }
 
 .custom-navbar {
