--- a/themes/reloaded/layouts/_default/single.html
+++ b/themes/reloaded/layouts/_default/single.html
@@ -3,8 +3,8 @@
     <div class="row justify-content-center">
         <div class="col-sm-12 col-lg-8">
             <h2>{{ .Title }}</h2>
-            {{ partial "metadata.html" . }}
-            <br/>
+            <p>{{ partial "metadata.html" . }}</p>
+
             {{ .Content }}
         </div>
     </div>
