--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,37 @@ body {
     background-color: #11131b;
 }
 
-.name, time {
-    font-weight: 900;
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.75rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+h5 {
+    font-size: 1.25rem;
 }
 
 .headerImage {
-    width: 225px;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    border-radius: 1%;
-    max-width: 100%;
-    height: auto;
+    width: 225px !important;
+    margin-bottom: 20px !important;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.3) !important;
+    border-radius: 1% !important;
+    max-width: 100% !important;
+    height: auto !important;
+}
+
+.name, time {
+    font-weight: 900;
 }
 
 .custom-navbar {
