--- a/themes/reloaded/layouts/_default/list.html
+++ b/themes/reloaded/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-sm-12 col-lg-8">
+        <div class="col-sm-12 col-md-10 col-lg-8">
             <h2>{{ .Title }}</h2>
             {{ range .Pages.ByPublishDate.Reverse }}
             <h4><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h4>
