--- a/themes/reloaded/layouts/_default/single.html
+++ b/themes/reloaded/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-sm-12 col-lg-8">
+        <div class="col-sm-12 col-md-10 col-lg-8">
             <h2>{{ .Title }}</h2>
             <p>{{ partial "metadata.html" . }}</p>
 
