--- a/themes/reloaded/layouts/partials/header.html
+++ b/themes/reloaded/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div class="container custom-navbar">
     <div class="row justify-content-center">
-        <div class="col-sm-12 col-lg-10">
+        <div class="col-sm-12 col-md-10 col-lg-8">
             <nav class="navbar navbar-expand">
                 <a class="navbar-brand custom-nav-item title-lg-view" href="/">Matthew Zegar</a>
                 <a class="navbar-brand custom-nav-item title-sm-view" href="/">MZ</a>
